# econagents

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: contributing.md  dependabot.yml
.github/workflows/: deploy.yaml  tests.yaml
docs/source/: Contributing.rst  Customizing_Agent_Roles.rst  Customizing_Roles.rst  Definitions.rst  EconAgents_UI.rst  Installation.rst  Managing_Agents.rst  Managing_State.rst  Overview.rst  Personas.rst  Tutorial.rst  Using_EconAgents_UI.rst  api.rst  conf.py  index.rst
econagents/: __init__.py  cli.py
econagents-ibex-tudelft/: test_ibex_parser.py
econagents-ibex-tudelft/econagents_ibex_tudelft/: __init__.py
econagents-ibex-tudelft/econagents_ibex_tudelft/config_parser/: __init__.py  ibex_tudelft.py
econagents-ibex-tudelft/econagents_ibex_tudelft/core/: __init__.py
econagents/adapters/: __init__.py
econagents/adapters/config/: __init__.py  yaml.py
econagents/adapters/llm/: __init__.py  base.py  observability.py  ollama.py  openai.py
econagents/adapters/parsing/: __init__.py  json.py
econagents/adapters/prompts/: __init__.py  jinja.py
econagents/adapters/protocol/: __init__.py  flat.py  ibex.py
econagents/adapters/state/: __init__.py  event_field.py
econagents/adapters/tools/: __init__.py  base.py  calculator.py  python_exec.py  registry.py
econagents/adapters/transport/: __init__.py  websocket.py
econagents/config_parser/: base.py  basic.py  ibex_tudelft.py
econagents/core/: agent_role.py  game_runner.py  protocol.py  transport.py
econagents/core/manager/: base.py  phase.py
econagents/core/state/: __init__.py  chat.py  game.py  market.py
econagents/domain/: __init__.py  events.py  messages.py  role.py
econagents/domain/state/: __init__.py  game.py
econagents/llm/: __init__.py  base.py  ollama.py  openai.py
econagents/personas/: __init__.py
econagents/ports/: __init__.py  codec.py  llm.py  parsing.py  prompts.py  state.py  tools.py  transport.py
econagents/runtime/: __init__.py  agent.py  experiment_factory.py  game_runner.py  phase_engine.py
examples/continuous_double_auction/: README.md  __init__.py  agents.py  run_game.py  state.py  verify.py
examples/continuous_double_auction/prompts/: trader_system.jinja2  trader_user_phase_market.jinja2
examples/continuous_double_auction/server/: __init__.py  create_game.py  server.py
examples/dictator/: README.md  agents.py  manager.py  run_game.py  state.py  verify.py
examples/dictator/prompts/: dictator_system.jinja2  dictator_user_phase_1.jinja2  dictator_user_phase_2.jinja2  receiver_system.jinja2  receiver_user_phase_2.jinja2
examples/prisoner/: agents.py  config.yaml  manager.py  prisoner.yaml  run_game.py  run_game_from_yaml.py  state.py  verify.py
examples/prisoner_personas/: agents.py  manager.py  prisoner.yaml  run_game.py  run_game_from_yaml.py
examples/public_goods/: README.md  agents.py  manager.py  run_game.py  state.py  verify.py
tests/: conftest.py  test_voting_state.py
tests/adapters/: test_ibex_codec.py  test_protocol.py  test_transport.py  test_yaml_config.py
tests/config_parser/: __init__.py  test_base_parser.py
tests/core/: test_agent.py  test_game_runner.py  test_game_state.py  test_manager_base.py  test_manager_phase.py  test_protocol.py  test_transport.py
tests/domain/: test_game_state.py  test_role.py  test_role_helpers.py  test_role_tools.py
tests/llm/: test_observability.py  test_ollama.py  test_openai.py
tests/personas/: test_integration.py  test_personas.py
tests/runtime/: test_agent.py  test_experiment_factory.py  test_game_runner.py  test_phase_engine.py
(+93 files in other folders)
