[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[project]
name = "econagents"
description = "A Python library that lets you use LLM agents in economic experiments."
license = "MIT"
readme = "README.md"
authors = [{ name = "Dylan Castillo", email = "dylan@iwanalabs.com" }]
dynamic = ["version"]
requires-python = ">=3.10,<4"
dependencies = [
    "pydantic>=2.11.5",
    "requests>=2.32.4",
    "websockets>=15.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/IBEX-TUDelft/econagents"
Repository = "https://github.com/IBEX-TUDelft/econagents"

[project.scripts]
econagents = "econagents.cli:run_cli"

[project.optional-dependencies]
openai = ["openai>=1.89.0"]
ollama = ["ollama>=0.5.1"]
langsmith = ["langsmith>=0.4.1"]
langfuse = ["langfuse>=3.0.3"]
standard = ["openai>=1.89.0", "langsmith>=0.4.1"]
all = ["openai>=1.89.0", "ollama>=0.5.1", "langsmith>=0.4.1", "langfuse>=3.0.3"]

[dependency-groups]
docs = [
    "myst-parser[linkify]>=4.0.1,<5",
    "sphinx>=8.1.3,<8.2",
    "sphinx-rtd-theme>=3.0.2,<3.1",
    "gitpython>=3.1.31",
    "sphinx-copybutton>=0.5.2,<0.6",
    "autodoc-pydantic>=2.2.0,<3",
]
dev = [
    "coverage[toml]>=5.1",
    "pre-commit>=2.16.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.7.0",
    "python-dotenv>=1.2.1,<2",
    "jupyter>=1.1.1,<2",
    "nest-asyncio>=1.6.0,<2",
    "ruff>=0.14.3,<0.15",
    "types-requests>=2.32.4.20250913,<3",
    "pytest-asyncio>=1.2.0,<2",
    "types-pyyaml>=6.0.12.20250915,<7",
]
debug = [
    "ipdb>=0.13.9",
    "line-profiler>=3.5.1",
]

[tool.uv]
# Only consider package versions that have been on PyPI for at least a week.
# Guards against compromised or broken zero-day releases.
exclude-newer = "1 week"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "econagents/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["econagents"]

[tool.hatch.build.targets.sdist]
include = [
    "/econagents",
    "/README.md",
    "/LICENSE",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
    "econagents/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug:",
    "if debug:",
    "if DEBUG:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["tests/"]

[tool.ruff]
target-version = 'py39'

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]

line-length = 120

[tool.ruff.lint]
ignore = [
    "B905",  # zip strict=True; remove once python <3.10 support is dropped.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "F811",  # Redefinition of unused name
    "D205",
    "S311",
]


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",  # use of "assert"
    "S102",  # use of "exec"
    "S106",  # possible hardcoded password.
    "PGH001",  # use of "eval"
]

[tool.codespell]
skip = 'uv.lock,'
